# CAV

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: cav_ppo_gsm8k.yaml  sft_gsm8k.yaml  sft_gsm8k_baseline.yaml  sft_gsm8k_format.yaml  verl_baseline_overrides.yaml  verl_cav_overrides.yaml  verl_grpo_correct_overrides.yaml  verl_grpo_overrides.yaml
docs/: method_alignment.md
scripts/: README.md  _eval_fmt_quick.py  _launch_grpo_correct_fmt_v3.sh  _launch_grpo_correct_now.sh  _launch_grpo_correct_v2.sh  eval_sft_format.py  install_env.sh  make_smoke_split_baseline.py  make_smoke_split_from_val.py  merge_sft_lora.py  preprocess_gsm8k.py  preprocess_gsm8k_baseline.py  run_full_backbone_cav.sh  run_smoke_grpo.sh  run_smoke_ppo.sh  test_cav_pipeline_steps.py  test_grpo_correct_reward.py  train_baseline_gsm8k.sh  train_cav_gsm8k.sh  train_grpo_correct_gsm8k.sh  train_grpo_gsm8k.sh  train_ppo.py  train_sft.py  train_sft_baseline.sh  train_sft_format.sh  use_env.sh
src/cav_rl/: __init__.py  cav.py  cli.py  config.py  data.py  lambda_dual.py  logprobs.py  modeling.py  parsing.py  ppo.py  prompts.py  rewards.py  rollout.py  sft_trainer.py  train_local_ppo.py  train_local_sft.py
src/cav_rl/verl/: __init__.py  advantage.py  baseline_metrics.py  baseline_reward.py  case_dump.py  config_path.py  grpo_correct_reward.py  hierarchical_rollout.py  main_baseline_grpo.py  main_baseline_grpo_correct.py  main_baseline_ppo.py  main_cav_ppo.py  masks.py  metrics.py  policy_loss.py  reward.py  reward1.py  sampling_patch.py  single_turn.py
