[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cav-rl"
version = "0.1.0"
description = "Computation Allocation Value RL for adaptive-budget LLM reasoning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.33.0",
    "datasets>=2.20.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pandas>=2.0.0",
    "peft>=0.12.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0.1",
    "ray>=2.10.0",
    "torch>=2.3.0",
    "tqdm>=4.66.0",
    "transformers>=4.44.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
